--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.18.71",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
+    "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
     "i18next": "^23.7.16",
     "i18next-browser-languagedetector": "^7.2.0",
