--- a/.env
+++ b/.env
@@ -1,5 +1,8 @@
 
 REACT_APP_ENV=production
 
+REACT_APP_TOKEN_ENQUIRY=/user//token/enquiry
+
 REACT_APP_MENU_DEFAULT_QUERY=/structure/menu/default/query
 REACT_APP_MENU_QUERY=/structure/menu/query
+REACT_APP_MENU_UPDATE=/structure/menu/update
